--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     margin: 0 auto;
 }</style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="/complexMathematics.js"></script>
+    <script src="complexMathematics.js"></script>
   </head>
   <body class="bg-dark text-light">
   <div class="text-justify text-center">
