--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <input type="text" id="name" class="bg-dark form-control centered text-center text-light" style="min-width:33%; max-width:40ch;" placeholder="Just enter your username here"></input>
     and<br>
   <button type="button" class="btn btn-outline-success btn-dark" onclick="complexMathematics()">Find out easily by clicking this button!</button><br><br>
-  <div id="sexiness">woohoo</div>
+  <div id="sexiness" hidden>woohoo</div>
   </div>
   </body>
 </html>
